
name:                ghc8prez
version:             0.1.0.0
synopsis:            Materials for a presentation on GHC 8 type system features
license:             MIT
license-file:        LICENSE
author:              András Kovács
maintainer:          puttamalac@gmail.com
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC 8.0.1                        

library
  exposed-modules:     OverloadedLabels, STLC, TypeInType, TypeApp, GenericFold, Indexing
  build-depends:
                base >=4.9 && <4.10,
                lens >=4.14 && <4.15,
                ghc-prim >=0.5 && <0.6,
                constraints >=0.8 && <0.9,
                singletons >=2.2 && <2.3,
                singleton-nats >=0.4 && <0.5,
                vector >=0.11 && <0.12

  default-language:    Haskell2010